# scrum-calzado_jyr

./: .env.example  .gitignore  AGENTS.md  COMO_CORRER_PROYECTO.md  DEPLOYMENT_CHECKLIST.md  GUIA_SQL_OPERACIONES.md  GUIA_SUBIR_GITHUB.md  GUIA_SUPABASE.md  MIGRACIONES.md  PRE_DEPLOY_CHECKLIST.md  README.md  RESUMEN_EJECUTIVO.md  RESUMEN_FINAL_CAMBIOS.md  USUARIOS_PRUEBA.md  docker-compose.yml  restore_supplies.sql  temp_response.json  test_schema.py
be/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
be/_scratch_backup/: cleanup_tasks.py  debug_env.py  debug_report.py  inspect_env.py  migrate_amount.py  migrate_amount_final.py  migrate_amount_hardcoded.py  migrate_amount_manual.py  migrate_amount_sqla.py  migrate_amount_ultra.py  migrate_binary_dsn.py  migrate_debug_ex.py  migrate_encoding_fix.py  migrate_internal.py  migrate_psycopg2.py  migrate_safe_error.py  test_report_query.py
be/alembic/: env.py
be/alembic/versions/: 001_create_initial_schema.py  002_seed_initial_data.py  003_seed_catalog_data.py  004_seed_test_users.py  005_supplies_module.py  006_supplies_color_category.py  007_supplies_float_sizes.py  008_product_supplies_float.py  008_supply_categories.sql  009_create_supply_categories.py  010_add_color.py  010_add_color_to_supply_categories.py  011_global_stage.py  012_observations.py  013_tasks_columns.py  014_add_reserved_to_inventory.py  015_add_entregado_status.py  016_add_pagado_task_status.py  017_add_completed_at_to_tasks.py  018_product_task_prices.py  019_add_por_liquidar_enum.py  020_add_tasks_order_product.py  021_line_group_order_details.py  022_fix_line_group_existing.py  023_add_line_group_to_tasks.py  024_make_assigned_to_nullable.py  025_add_task_observation.py  026_create_report_shares.py  027_add_avatar_url_to_users.py  028_add_rejection_fields_to_users.py  029_create_reactivation_tickets.py  030_notification_order_audit.py  031_scrap_models.py  032_incident_types.py  033_incidence_category.py  034_defect_code_nullable.py  035_custom_supply_name.py  036_pending_product_incidence.py  037_pending_incidence_description.py  038_invitation_expires_at.py
be/app/: database.py  dependencies.py  init_db.py  main.py  seed_data.py
be/app/core/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  (+1 more)
be/scratch/: debug_report.py
be/scripts/: create_admin.py  heal_line_groups.py
be/tests/: __init__.py  conftest.py  test_config.py  test_security.py
be/uploads/: .gitkeep
db/: Dockerfile  (+2 more)
(+263 files in other folders)
