# ============================================================
# Archivo: be/pyproject.toml
# Descripción: Manifiesto del proyecto Python (dependencias, metadata, tooling).
#
# ¿Qué?
#   - [project]: Metadata (name, version, descripción, authors)
#   - dependencies: 15+ paquetes core (fastapi, sqlalchemy, pydantic, jose, passlib)
#   - [project.optional-dependencies]dev: Testing (pytest, httpx, pytest-cov)
#   - [tool.ruff]: Linting config (line-length 100, target py312)
#   - [tool.pytest.ini_options]: Test discovery (tests/, test_*.py)
#
# ¿Para qué?
#   - Declarar dependencias (pip install equivalente moderno)
#   - Versionado centralizado (1.0.0 en un solo lugar)
#   - Tooling config (Ruff, Pytest) sin archivos separados
#   - PEP 621 standard (pyproject.toml reemplaza setup.py)
#
# ¿Impacto?
#   CRÍTICO — pip install -e . lee este archivo para instalar deps.
#   Modificar dependencies requiere: rebuild Docker image.
#   requires-python=">=3.12": Backend NO funciona con Python <3.12 (type syntax).
#   Dependencias: requirements.txt (generado de aquí en Docker build)
# ============================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calzado-jyr"
version = "1.0.0"
description = "Sistema de gestión integral para CALZADO J&R"
requires-python = ">=3.12"
authors = [
    {name = "CALZADO J&R"}
]

dependencies = [
    # 🚀 Framework y servidor
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    
    # 🗄️ Base de datos y ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    
    # 📋 Validación y configuración
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    
    # 🔐 Seguridad y autenticación
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "bcrypt>=4.0.0,<4.1.0",
    
    # 📧 Email
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    # 🧪 Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=6.0.0",
    
    # 🔍 Linting y formateo
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]
